webapp: update sbt getting started guide

--- a/src/main/webapp/help-globalConfig.html
+++ b/src/main/webapp/help-globalConfig.html
@@ -1,5 +1,5 @@
 <div>
   <p>
-    The SBT launch jar path, used to run SBT as described in <a href='http://code.google.com/p/simple-build-tool/wiki/Setup'>SBT setup documentation</a>
+    The SBT launch jar path, used to run SBT as described in <a href='http://www.scala-sbt.org/1.x/docs/index.html'>SBT setup documentation</a>
   </p>
 </div>
