--- a/src/main/resources/org/jvnet/hudson/plugins/SbtPluginBuilder/SbtInstallation/help-sbtArguments.html
+++ b/src/main/resources/org/jvnet/hudson/plugins/SbtPluginBuilder/SbtInstallation/help-sbtArguments.html
@@ -1,4 +1,5 @@
 <div>
 	Add flags to SBT launcher. You can for example set SBT's base directory with <tt>-Dsbt.global.base=...</tt>. For a list of possible
-    options see <a href="http://www.scala-sbt.org/0.13/docs/Command-Line-Reference.html">the documentation (for version 0.13)</a>.
+        options see <a href="http://www.scala-sbt.org/0.13/docs/Command-Line-Reference.html">the 0.13</a> or
+        <a href="http://www.scala-sbt.org/1.x/docs/Command-Line-Reference.html">1.0</a> documentation.
 </div>
